fixing layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ body {
 }
 
 .section-grid-images figure {
-    width: 95%;
+    width: 100%;
     height: 590px;
     background-color: #000;
 }
@@ -217,7 +217,7 @@ body {
 }
 
 .section-grid-images div {
-    width: 95%;
+    width: 100%;
     max-width: 1100px;
 }
 
@@ -248,8 +248,17 @@ body {
     font-size: 3.5rem;
     text-align: center;
     padding: 20px;
-    margin-bottom: 40px;
     color: #fff;
+}
+
+.section-grid-cards p {
+    color: #fff;
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 10px 20px;
+    max-width: 900px;
+    margin: 0 auto;
+    margin-bottom: 40px;
 }
 
 .section-grid-cards .grid-container {
@@ -275,6 +284,7 @@ body {
     font-size: 1.4rem;
     color: #fff;
     padding: 10px 0;
+    text-align: left;
 }
 
 .section-grid-cards .grid-container .card div p a {
